--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "sass-loader": "^8.0.2",
     "script-ext-html-webpack-plugin": "^2.1.4",
     "script-loader": "^0.7.2",
+    "url-loader": "^4.1.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0",
